--- a/package.json
+++ b/package.json
@@ -10,21 +10,23 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"axios": "^1.7.2",
+		"axios": "^1.7.4",
 		"dotenv": "^16.4.5",
-		"mongoose": "^8.4.0",
-		"next": "14.2.3",
-		"react": "^18",
-		"react-dom": "^18"
+		"markdown-to-jsx": "^7.4.7",
+		"mongoose": "^8.5.3",
+		"next": "14.2.5",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1"
 	},
 	"devDependencies": {
-		"@types/node": "^20",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
+		"@types/markdown-it": "^14.1.2",
+		"@types/node": "^20.4.0",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
 		"eslint": "^8",
-		"eslint-config-next": "14.2.3",
-		"postcss": "^8",
-		"tailwindcss": "^3.4.1",
-		"typescript": "^5"
+		"eslint-config-next": "14.2.5",
+		"postcss": "^8.4.41",
+		"tailwindcss": "^3.4.10",
+		"typescript": "^5.5.4"
 	}
 }
